[B]v.1.0.1[/B]
--------------
Thanks to Amra:
Added new music genre icons
Added Glass theme


[B]v.1.0.00[/B]
--------------
First attempt for main repo.


[B]v.0.9.81[/B]
--------------
Added support for Next Aired Date in TV Views
Modified Full Screen Info and Paused Screen
	- Smaller top menu
	- Added Current Time
	- Added support for choosing either ClearArt, Logo or Poster image
	- Removed Plot
Increased Latest Added items to 10 items from 5.

[B]v.0.9.80[/B]
--------------
Added new Panel view from sialivi!

[B]v.0.9.8[/B]
--------------
More Eden standardization
Swapped Logo Downloader for Atrwork Downloader
Added sialivi's Poster and Fanart view

[B]v.0.9.7[/B]
--------------
More Eden standardization - Issue 40
Added Logo support in DialogFullScreenInfo

[B]v.0.9.6[/B]
Updated Music Info screen
Added Low List view to Music
Removed List view from Music

[B]v0.9.5[/B]
Revised Music OSD
Added Now Playing OSD/Controls

[B]v0.9.4[/B]
--------------
Removed unused files
Added ClearArt support on seekbar


[B]v0.9.3[/B]
--------------
- Fixed temperature
- Fixed Logo view and remove reflection
- Fixed Day display
- Fix missing toasts when toggling subtitles on/off, or switching between subtitle tracks
- Changed all occurances of "Min" to "min" and localized.
- Clean up scroll bars & nibs
- Fixed Content/Scraper Dialog overlapping weather/temperature
- Updated RSS font to Ubuntu font
- Fixed weather icon on home page
- Updated startup playlist to use Smart playlist


[B]v0.9.2[/B]
--------------
- First submission by stoli
- Quick fixes to get running in Eden
- Version change to get Eden compliant

v0.91 Alpha2
-------------
- Fixed some Linux capitalization errors
- Fixed Fanart view movie set posters not showing
- Added missing "Movie Set" label on various viewtypes
- Added landscape.jpg option to Fanart view for TV Shows
- Changed round button animations
- Fixed German translation for "Movie Set"
- Increase default home style time per image