@@ -1,134 +1,0 @@
-<colors>
-
-	<color name="Clear">00FFFFFF</color> <!-- dont change -->
-	<color name="Black">FF000000</color>
-	<color name="White">FFFFFFFF</color>
-	<color name="Red">FFFF0000</color>
-	<color name="Blue">FF0000FF</color>
-
-	<!-- Metropolis Glass Colors -->
-	<!-- Global Colors -->
-	<color name="BackgroundColor">89FFFFFF</color>				<!-- 89FFFFFF -->
-	<color name="FanartDiffuse">26FFFFFF</color>
-	<color name="Home2FanartDiffuse">77FFFFFF</color>
-	<color name="FrameBackgroundDiffuse">dd000000</color>
-	<color name="Time">ddFFFFFF</color>
-	<color name="TimeAMPM">ddcdd99d</color>
-	<color name="Date">FFc89008</color>
-	<color name="Temp">ddcdd99d</color>
-	<color name="GlobalHeading">FFcdd99d</color>
-	<color name="GlobalHeadingDetails">FFFFFFFF</color>
-	<color name="HelpText">FFc89008</color>
-	<color name="HelpArrowDiffuse">cccdd99d</color>
-	<color name="TextNF">eeFFFFFF</color>
-	<color name="TextFO">FFc89008</color>
-	<color name="TextDisabled">FFff5858</color>
-	<color name="LowerText">eeFFFFFF</color>
-	<color name="ButtonText">ddFFFFFF</color>
-	<color name="ButtonDiffuse">89FFFFFF</color>
-		
-	<!-- Home Screen -->
-	<color name="HomeMenuText">ddFFFFFF</color>
-	<color name="HomeMenuTextFocused">FFc89008</color>
-	<color name="SubmenuText">ddFFFFFF</color>
-	<color name="SubmenuTextFocused">FFc89008</color>
-	<color name="RSSText">FFc89008</color>
-	<color name="RSSHeadline">FFFFFFFF</color>
-	<color name="RSSTitle">FFcdd99d</color>
-	<color name="RecentlyAddedNF">eeFFFFFF</color>
-	<color name="RecentlyAddedFO">eef8cd22</color>
-	<color name="HomeStatsCategory">eef8cd22</color>
-	<color name="HomeStatsNumber">ddFFFFFF</color>
-	<color name="XBMCLogoDiffuse">eeFFFFFF</color>
-	<color name="Home2SkinName">FFc89008</color>
-	
-	<!-- Media Flags -->
-	<color name="MediaFlagDiffuse">dde0e2d4</color>				<!-- ddFFFFFF -->
-	<color name="MediaFlagBoxDiffuse">dd3c95c8</color>
-	<color name="RatingStarDiffuse">FFc89008</color>
-	<color name="IMDbDiffuse">eed0b331</color>
-
-	<!-- Viewtypes -->
-	<color name="TitleText">FFFFFFFF</color>
-	<color name="MediaDetailsInfo">eef8cd22</color>
-	<color name="MediaDetailsGenre">FFcdd99d</color>
-	<color name="MediaDetailsYear">eef8cd22</color>
-	<color name="MediaDetailsDuration">eef8cd22</color>
-	<color name="MediaDetailsEpisodes">eef8cd22</color>
-	<color name="WatchedOverlay">FFc89008</color>
-	<color name="BulletDiffuse">ddFFFFFF</color>
-	<color name="ArrowDiffuse">FFc89008</color>
-	<color name="BannerFrameNF">ee3c95c8</color>
-	<color name="GlassDiffuse">89FFFFFF</color>
-	<color name="FocusBar">bb60783e</color>					<!-- bb3c95c8 / bb7c955b -->	
-	<color name="FocusBarText">FFFFFFFF</color>
-
-	<!-- Low List View -->
-	<color name="LowListTitle">ddd4c2c2</color>
-	<color name="LowListDivider">aaFFFFFF</color>
-	
-	<!-- Landscape View -->
-	<color name="LandscapeDiffuse">89FFFFFF</color>
-
-	<!-- Coverflow View -->
-	<color name="PosterDiffuse">89FFFFFF</color>
-	
-	<!-- Files View -->
-	<color name="FilesDividerDiffuse">20FFFFFF</color>
-	<color name="FilesStarDiffuse">ff3c95c8</color>
-	
-	<!-- Settings -->
-	<color name="SettingsHeading">FFc89008</color>
-	<color name="SettingsDetail">ddFFFFFF</color>
-	<color name="SettingsLine">88727272</color>
-	<color name="SettingsTitle">eef8cd22</color>
-	
-	<!-- Info -->
-	<color name="InfoLines">893c95c8</color>
-	<color name="MPAADescription">eef8cd22</color>
-	
-	<!-- OSD -->
-	<color name="OSDBackgroundColor">ddFFFFFF</color>
-	<color name="OSDProgressBar">ddcdd99d</color>				<!-- ddc89008 -->
-	<color name="OSDFinishTime">FFFFFFFF</color>
-	<color name="OSDPlayerStatusText">ddcdd99d</color>
-	<color name="OSDBookmarkNF">32FFFFFF</color>
-	<color name="OSDBookmarkFO">aa3c95c8</color>
-	
-	<!-- Dialogs -->
-	<color name="DialogBackgroundColor">FF6eb3ee</color>
-	<color name="DialogDropdownColor">FF6eb3ee</color>
-	<color name="DialogProgressBar">FFf8cd22</color>
-	<color name="DialogTextFO">eef8cd22</color>
-
-	<!-- Weather -->
-	<color name="WeatherBGDiffuse">293c95c8</color>
-	<color name="WeatherDay">eef8cd22</color>
-	<color name="WeatherHighTemp">eef8cd22</color>
-	<color name="WeatherLowTemp">eecdd99d</color>
-	<color name="WeatherHeading">FFc89008</color>
-	<color name="WeatherDetails">eeFFFFFF</color>
-	
-	<!-- Now Playing -->
-	<color name="NowPlayingTitle">ddc89008</color>				<!-- Now Playing in large frame on Default home screen -->
-	<color name="NowPlayingDetails">FFFFFFFF</color>			<!-- Now Playing in large frame on Default home screen -->
-	<color name="NowPlayingTitle2">eef8cd22</color>				<!-- Now Playing text on dropdown -->
-	<color name="NowPlayingDetails2">eeFFFFFF</color>			<!-- Now Playing text on dropdown -->
-	
-	
-	
-	<!-- Alaska Revisited Colors -->
-
-	<!-- Background/Dialog colours -->
-	<color name="PicturesDiffuse">52FFFFFF</color>				<!-- Fullscreen Picture background colour and transparency-->
-	<color name="DialogBackgroundColour">FFFFFFFF</color>		<!-- dialogback.png colour and transparency -->
-	<color name="GlobalColour">FFFFFFFF</color>					<!-- background.png colour - dont change transparency -->
-	<color name="GlobalContextColour">32FFFFFF</color>			<!-- Context Menu colour and transparency -->
-
-	<!-- Global colours -->
-	<color name="GlobalDialog">FF686868</color>
-	<color name="GlobalDialogDetails">FF686868</color>
-	<color name="NowPlayingWindowFocus">FF0000ff</color>
-	
-
-</colors>
